[gd_scene load_steps=3 format=3 uid="uid://l1d8hwvn7hbq"]

[ext_resource type="Script" uid="uid://n3m5d30amhug" path="res://scripts/camera_input.gd" id="1_3wtcb"]

[sub_resource type="SphereShape3D" id="SphereShape3D_o6gvm"]
margin = 1.0

[node name="CameraInput" type="Node3D" node_paths=PackedStringArray("camera_mount", "camera_rot", "camera_3D")]
script = ExtResource("1_3wtcb")
camera_mount = NodePath("CameraMount")
camera_rot = NodePath("CameraMount/CameraRot")
camera_3D = NodePath("CameraMount/CameraRot/SpringArm3D/Camera3D")

[node name="CameraMount" type="Node3D" parent="."]

[node name="CameraRot" type="Node3D" parent="CameraMount"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraMount/CameraRot"]
collision_mask = 2
shape = SubResource("SphereShape3D_o6gvm")
spring_length = 1.8
margin = 1.0

[node name="Camera3D" type="Camera3D" parent="CameraMount/CameraRot/SpringArm3D"]
